quilt/tests/snapshots/expand_rust__ground_stmt_sequence_unquote_spliced.snap
---
source: quilt/tests/expand_rust.rs
expression: out
---
let p = {
    let mut b_ = tb("source_file");
    tb("function_item").c(&sym("fn")).w(" ").c(&leaf("identifier", "keep")).c(&tb("parameters").c(&sym("(")).c(&sym(")")).b()).w(" ").c(&tb("block").c(&sym("{")).c(&sym("}")).b()).b().emit(&mut b_);
    b_.nl();
    b_.nl();
        let n = 3;
        tb("function_item").c(&sym("fn")).w(" ").c(&leaf("identifier", "made")).c(&tb("parameters").c(&sym("(")).c(&sym(")")).b()).w(" ").c(&tb("block").c(&sym("{")).c(&sym("}")).b()).b().emit(&mut b_);;
    b_.b()
};
