quilt/tests/snapshots/expand_rust__ground_tail_quote_stays_value.snap
---
source: quilt/tests/expand_rust.rs
expression: out
---
fn f() -> Arc<QTerm> {
    tb("binary_expression").c(&leaf("integer_literal", "1")).w(" ").c(&sym("+")).w(" ").c(&leaf("integer_literal", "2")).b()
}
