quilt/tests/snapshots/expand_rust__simple.snap
---
source: quilt/tests/expand_rust.rs
expression: "expand_both(\"let expr = ↖1 + 2↗;\")?"
---
let expr = tb("binary_expression").c(&leaf("integer_literal", "1")).w(" ").c(&sym("+")).w(" ").c(&leaf("integer_literal", "2")).b();
