quilt/tests/snapshots/expand_rust__splicing_nested.snap
---
source: quilt/tests/expand_rust.rs
expression: out
---
{
    fn mk(i: usize) -> Result<Arc<QTerm>> {
        Ok(tb("expression_statement").c(&{
            let mut b_ = tb("block");
            sym("{").emit(&mut b_);
            b_.push("    ");
            b_.nl();
            {
                for c in 0..i {
                    {
                        if c != 0 {NL.emit(&mut b_);}
                        tb("expression_statement").c(&tb("macro_invocation").c(&leaf("identifier", "println")).c(&sym("!")).c(&tb("token_tree").c(&sym("(")).c(&tb("string_literal").c(&sym("\"")).c(&leaf("string_content", "hi")).c(&sym("\"")).b()).c(&sym(")")).b()).b()).c(&sym(";")).b().emit(&mut b_);
                    }.emit(&mut b_);
                }
            };
            b_.pop();
            b_.nl();
            sym("}").emit(&mut b_);
            b_.b()
        }).b())
    }
    mk(3).unwrap()
}
